stop gap way of dynamically adding streams
Needs to be improved. Takes up too much space on the current banner making it impossible to add more than a couple for most resolutions

--- a/style.css
+++ b/style.css
@@ -115,6 +115,11 @@ input.error::placeholder {
     border-right: #b9b9b9 2px solid;
 }
 
+.inner-input-group {
+    display: flex;
+    margin-right: 5px;
+}
+
 #stream-input {
     margin-top: 10%;
     display: flex;
